--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3"
   }
 }
