--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "nodemon": "^2.0.12",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3"
+  },
+  "devDependencies": {
+    "@types/socket.io-client": "^1.4.36"
   }
 }
