--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server/server.js",
   "scripts": {
     "build": "tsc",
     "watch-ts": "tsc -w",
-    "watch-node": "nodemon dist/server.js nodemon dist/client.js ",
+    "watch-node": "nodemon dist/server/server.js nodemon dist/client/client.js ",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript, Node\" -c \"yello.bold, cyan.bold\" \"yarn run watch-ts\" \"yarn run watch-node\"",
     "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
@@ -22,6 +22,7 @@
     "socket.io-client": "^4.1.3"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.6",
     "@types/socket.io-client": "^1.4.36"
   }
 }
