--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/socket.io": "^3.0.2",
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "nodemon": "^2.0.12",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3"
