--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/socket.io": "^3.0.2",
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
+    "get-urls": "^10.0.0",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "nodemon": "^2.0.12",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3"
