--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.13",
     "@types/socket.io": "^3.0.2",
     "concurrently": "^6.2.0",
+    "date-fns": "^2.23.0",
     "express": "^4.17.1",
     "get-urls": "^10.0.0",
     "jquery": "^3.6.0",
