--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript, Node\" -c \"yello.bold, cyan.bold\" \"yarn run watch-ts\" \"yarn run watch-node\"",
     "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
-  "author": "",
+  "author": "En-Wen Tsai",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.15.0",
     "@types/express": "^4.17.13",
+    "@types/qs": "^6.9.7",
     "@types/socket.io": "^3.0.2",
     "concurrently": "^6.2.0",
     "date-fns": "^2.23.0",
@@ -22,6 +24,7 @@
     "jquery": "^3.6.0",
     "moment": "^2.29.1",
     "nodemon": "^2.0.12",
+    "qs": "^6.7.0",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3"
   },
