--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         
-        "module": "commonjs",
+        "module": "ESNext",
         "esModuleInterop": false,
         "target": "es6",
         "noImplicitAny": true,
