--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
-  "main": "server/server.js",
+  "main": "public/dist/server/server.js",
   "scripts": {
     "build": "tsc",
     "watch-ts": "tsc -w",
-    "watch-node": "nodemon dist/server/server.js nodemon dist/client/client.js ",
+    "watch-node": "nodemon public/dist/server/server.js nodemon public/dist/client/client.js ",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript, Node\" -c \"yello.bold, cyan.bold\" \"yarn run watch-ts\" \"yarn run watch-node\"",
     "test": "mocha -r ts-node/register src/**/*.spec.ts"
   },
